--- a/index.html
+++ b/index.html
@@ -2,34 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main id="content">
+    <header></header>
+    <section class="card-info">
+      <h1>Victor Crest<span>26</span></h1>
+      <p>London</p>
+    </section>
+    <hr>
+    <footer class="card-stats">
+      <div class="card-stat">
+        <span>80K</span>
+        <span>Followers</span>
+      </div>
+      <div class="card-stat">
+        <span>803K</span>
+        <span>Likes</span>
+      </div>
+      <div class="card-stat">
+        <span>1.4K</span>
+        <span>Photos</span>
+      </div>
+    </footer>
+  </main>
 </body>
 </html>
